Background,context-state datos de hijo a padre

--- a/src/Components/Header/misEstilos.css
+++ b/src/Components/Header/misEstilos.css
@@ -3,5 +3,6 @@
 
 }
 .nav-link:hover,.p-3:hover{
-  color:rgb(221, 33, 33)!important
+  color:rgb(0, 122, 255)!important
+  /* color: "#007aff" !important */
 }
