--- a/src/Components/Carts/misEstilos.css
+++ b/src/Components/Carts/misEstilos.css
@@ -3,3 +3,23 @@
 
     backdrop-filter: blur(10px);
   }
+
+  
+/* .bg{
+	background-size: cover;
+	height: 100px;
+	text-align: center;
+	position: relative;
+	z-index: 5;
+}
+.bg:after{
+	content: "";
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	left:0;
+	top:0;
+	background: inherit;
+	filter: blur(10px);
+	z-index: 3;
+} */
