--- a/src/Components/Header/misEstilos.css
+++ b/src/Components/Header/misEstilos.css
@@ -1,8 +1,9 @@
-.nav-link,.p-3{
-  color:rgb(255, 255, 255 )!important
-
+.nav-link,
+.p-3 {
+  color: rgb(255, 255, 255) !important;
 }
-.nav-link:hover,.p-3:hover{
-  color:rgb(0, 122, 255)!important
+.nav-link:hover,
+.p-3:hover {
+  color: rgb(0, 122, 255) !important;
   /* color: "#007aff" !important */
 }
