--- a/src/Components/Carts/misEstilos.css
+++ b/src/Components/Carts/misEstilos.css
@@ -2,3 +2,33 @@
 
     backdrop-filter: blur(10px);
   }
+
+
+  .swal-modal {
+    background-color: rgba(8,15,40,0.69);
+    /* background-color:  url("../../assets/fondo.png"); */
+    border: 3px solid rgba(8,15,40,0.69);;
+  }
+
+  .swal-icon--success:after, .swal-icon--success:before {
+    background:  rgba(8,15,40,0) !important;
+  }
+
+  /* .swal-icon--success__hide-corners {
+
+    background-color:  rgba(8,15,40,0.69);
+  } */
+
+  .swal-icon--success__hide-corners {
+    background-color: rgba(8,15,40,0);
+}
+
+.swal-title {
+  color: rgb(255 255 255);
+}
+
+.swal-text {
+  color: rgb(255 255 255);
+}
+
+
