--- a/src/Components/Header/misEstilos.css
+++ b/src/Components/Header/misEstilos.css
@@ -38,3 +38,12 @@ table{
 
   box-shadow: none;
 }
+.imgIconSearch:hover{
+  /* color: gold; */
+  /* filter: grayscale(2), */
+  /* background-color: red;  */
+  /* background-blend-mode: multiply;  */
+  /* filter: invert(50%); */
+  /* filter: opacity(0.1) drop-shadow(0px 0 0 rgb(0, 122, 255)); */
+  /* filter: hue-rotate(240deg); */
+}
