--- a/src/Components/Header/misEstilos.css
+++ b/src/Components/Header/misEstilos.css
@@ -47,3 +47,9 @@ table{
   /* filter: opacity(0.1) drop-shadow(0px 0 0 rgb(0, 122, 255)); */
   /* filter: hue-rotate(240deg); */
 }
+
+
+.navbar-toggler {
+  background-color: white !important;
+   
+}
